# django-simple-saml

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Aptfile  CHANGELOG.md  Procfile  README.md  app.json  create_cert.sh  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.claude/commands/: pr-description.md
.cursor/: Dockerfile  environment.json
.github/workflows/: tox.yml
demo/: admin.py  app.json  models.py  saml.py  settings.py  urls.py  views.py
demo/migrations/: 0001_initial.py
demo/settings/: base.py  heroku.py  local.py
demo/templates/: index.html
simple_saml/: admin.py  apps.py  backends.py  exceptions.py  metadata.py  models.py  urls.py  views.py
simple_saml/migrations/: 0001_initial.py  0002_identityprovider_provider.py  0003_identityprovider_requested_authn_context_comparison_and_more.py
tests/: test_backends.py  test_models.py
