[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "Project template for Django app, using Poetry."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/poetry-template"
repository = "https://github.com/yunojuno/poetry-template"
documentation = "https://github.com/yunojuno/poetry-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "demo" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1"
social-auth-app-django = "^5.1.0"
python3-saml = "*"
dj_database_url = { version = "*", optional=true}
psycopg2-binary = { version = "*", optional=true}
gunicorn = { version = "*", optional=true}

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
# flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.extras]
heroku = ["dj-database-url", "psycopg2-binary", "gunicorn"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
