[tool.poetry]
name = "django-simple-saml"
version = "0.4.0"
description = "Django app for managing multiple SAML Identity Providers."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-simple-saml"
repository = "https://github.com/yunojuno/django-simple-saml"
documentation = "https://github.com/yunojuno/django-simple-saml"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "simple_saml" }]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2,<7.0"
social-auth-app-django = "*"
python3-saml = "*"
dj_database_url = { version = "*", optional=true}
django-sslserver = { version = "*", optional=true}
psycopg2-binary = { version = "*", optional=true}
gunicorn = { version = "*", optional=true}
whitenoise = { version = "*", optional=true}

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.extras]
heroku = ["dj-database-url", "psycopg2-binary", "gunicorn", "whitenoise"]
localhost = ["django-sslserver", "whitenoise"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
